Fix report-a-problem form alignment with new static
On a version of `static` that includes the [report-a-problem improvements](https://github.com/alphagov/static/pull/441),
the report-a-problem form is misaligned. This change fixes that issue, while not really
breaking anything when `whitehall` runs against the old version of `static`.

--- a/app/assets/stylesheets/frontend/views/_html-publications.scss
+++ b/app/assets/stylesheets/frontend/views/_html-publications.scss
@@ -356,7 +356,6 @@
   }
   .report-a-problem-container {
     margin-left: 0;
-    max-width: 33em;
   }
 
   @include right-to-left {
