--- a/app/assets/stylesheets/frontend/views/_layouts.scss
+++ b/app/assets/stylesheets/frontend/views/_layouts.scss
@@ -32,7 +32,3 @@ p.report-a-problem-toggle {
     text-decoration: underline;
   }
 }
-
-.report-a-problem-container {
-  max-width: 33em;
-}
